# aicharlib

./: Cargo.toml  LICENSE  TODO.md
char_card/: Cargo.toml
char_card/src/: error.rs  ffi.rs  lib.rs  wasm.rs
char_card/tests/: alpin_dale.rs  melina.rs
extensions/: Cargo.toml
extensions/src/: ffi.rs  lib.rs
ffi/src/: cvec.rs  lib.rs
inject_manager/: Cargo.toml
inject_manager/src/: ffi.rs  lib.rs
