[package]
name = "char_card"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
png = "0.17.13"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
thiserror = "1.0.57"
wasm-bindgen = "0.2.92"
ffi = { path = "../ffi" }
inject_manager = { path = "../inject_manager" }
extensions = { path = "../extensions" }