[package]
name = "inject_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
png = "0.17.13"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
thiserror = "1.0.57"
wasm-bindgen = "0.2.92"
extensions = { path = "../extensions" }
ffi = { path = "../ffi" }